test/expected/parse_recovery_multi.out
shit: 1:1: error: 'fi' has no matching 'if'.
     1 |  fi
       |  ^~ here.
shit: 3:1: error: 'done' has no matching 'while', 'until', or 'for'.
     3 |  done
       |  ^~~~ here.
